Modified safearg type

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -23,7 +23,7 @@
 
         <argument
             android:name="selectedAsteroid"
-            app:argType="com.curiouswizard.asteroidradar.Asteroid" />
+            app:argType="com.curiouswizard.asteroidradar.model.Asteroid" />
     </fragment>
 
 </navigation>
