--- a/app/src/main/res/menu/overflow_menu.xml
+++ b/app/src/main/res/menu/overflow_menu.xml
@@ -2,11 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/show_next_week_menu"
-        android:title="@string/next_week_asteroids" />
+        android:title="@string/next_week_asteroids"
+        android:checked="true" />
     <item
         android:id="@+id/show_today_menu"
         android:title="@string/today_asteroids" />
-    <item
-        android:id="@+id/show_saved_menu"
-        android:title="@string/saved_asteroids" />
 </menu>
